--- a/index.html
+++ b/index.html
@@ -3,12 +3,197 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Untitled Document</title>
+<title>Twin Finch Roastery</title>
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
 <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
+
+<header>
+	<div class="wrapper">
+    	<div class="row">
+        	<div>
+            </div>
+        	<nav>
+            	<ul>
+            		<li>
+                        <a></a>
+                    </li>
+                    <li>
+                        <a></a>
+                    </li>
+                    <li>
+                        <a></a>
+                    </li>
+                    <li>
+                        <a></a>
+                    </li>
+                    <li>
+                        <a></a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <!--Hero-->
+        <div class="row">
+        	<div>
+            	<h1></h1>
+                <p></p>
+                <a></a>
+            </div>
+            <div>
+            	<a></a>
+                <a></a>
+                <a></a>
+                <a></a>
+            </div>
+        </div>
+    </div>
+</header>
+<!--Products-->
+<section>
+	<div class="wrapper">
+    	<div class="row">
+        	<header>
+            	<h2></h2>
+            </header>
+            <section>
+            	<header>
+                	<h3></h3>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </header>
+            </section>
+            <div>
+            	<p></p>
+                <p></p>
+            </div>
+            <section>
+            	<header>
+                	<h3></h3>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </header>
+            </section>
+            <section>
+            	<header>
+                	<h3></h3>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </header>
+            </section>
+            <section>
+            	<header>
+                	<h3></h3>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </header>
+            </section>
+            <section>
+            	<header>
+                	<h3></h3>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </header>
+            </section>
+            <div>
+            	<p></p>
+                <a></a>
+            </div>
+        </div>
+    </div>
+</section>
+<!--About Our Coffee-->
+<section>
+	<div class="wrapper">
+    	<div class="row">
+        	<header>
+            	<h2></h2>
+            </header>
+            <p></p>
+            <a></a>
+        </div>
+    </div>
+</section>
+<!--Find Us-->
+<section>
+	<div class="wrapper">
+    	<div class="row">
+        	<header>
+            	<h2></h2>
+            </header>
+        </div>
+    </div>
+</section>
+<!--Connect With Us-->
+<section>
+	<div class="wrapper">
+    	<div class="row">
+        	<header>
+            	<h2></h2>
+            </header>
+        </div>
+    </div>
+</section>
+
+<footer>
+	<div class="wrapper">
+    	<div class="row">
+        	<div>
+            </div>
+            <div>
+            	<h4></h4>
+                <nav>
+                	<ul>
+                        <li>
+                            <a></a>
+                        </li>
+                        <li>
+                            <a></a>
+                        </li>
+                        <li>
+                            <a></a>
+                        </li>
+                        <li>
+                            <a></a>
+                        </li>
+                        <li>
+                            <a></a>
+                        </li>
+                	</ul>
+                </nav>
+            </div>
+            <div>
+            	<ul>
+                	<li>
+                    	<a></a>
+                    </li>
+                    <li>
+                    	<a></a>
+                    </li>
+                    <li>
+                    	<a></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
+
+
 
 <div class="wrapper">
 	<!-- 1 -->
