--- a/index.html
+++ b/index.html
@@ -15,32 +15,32 @@
 	<div class="bg-drk-red">
         <div class="wrapper">
             <div class="row">
-                <div class="col-1-4 left">
+                <div class="col-1-4">
                     <a href="#">
                         <img src="img/logo.png" alt="Twin Finch" width="100">
                     </a>
                 </div>
-                <nav class="col-1-2 right">
+                <nav class="right" id="nav">
                     <ul>
-                        <li>
+                        <li id="home-sml">
                             <a href="#">Home</a>
                         </li>
-                        <div id="product-sml">
-                            <li>
-                                <a href="#prodcuts">Products</a>
-                            </li>
-                        </div>
-                        <div id="nav-sml">
-                            <li>
-                                <a href="#about">About Our Coffee</a>
-                            </li>
-                            <li>
-                                <a href="#find">Find Us</a>
-                            </li>
-                            <li>
-                                <a href="#contact">Connect With Us</a>
-                            </li>
-                        </div>
+                        <li id="product-sml">
+                            <a href="#prodcuts">Products</a>
+                        </li>
+                        <li id="nav-sml">
+                        	<ul>
+                                <li>
+                                    <a href="#about">About Our Coffee</a>
+                                </li>
+                                <li>
+                                    <a href="#find">Find Us</a>
+                                </li>
+                                <li>
+                                    <a href="#contact">Connect With Us</a>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -237,12 +237,13 @@
             	<div class="row">
                     <div class="col-5-6">
                         <form>
-                        	<label for="name"></label>
+                        	<label for="name">Name</label>
                             <input type="text" id="name" placeholder="Full Name">
-                            <label for="mail"></label>
+                            <label for="mail">Email</label>
                             <input type="email" id="mail" placeholder="Email Address">
-                            <textarea placeholder="Additional Information..."></textarea>
-                            <label for="sub"></label>
+                            <label for="info">Additional Information</label>
+                            <textarea placeholder="Additional Information..." id="info"></textarea>
+                            <label for="sub">Submit</label>
                             <input type="submit" id="sub" >
                         </form>
                     </div>
@@ -252,9 +253,9 @@
             	<div class="row">
                     <div class="col-5-6">
                         <form>
-                        	<label for="email"></label>
+                        	<label for="email">Email</label>
                             <input type="email" id="email">
-                            <label for="submit"></label>
+                            <label for="submit">Submit</label>
                             <input type="submit" id="submit">
                         </form>
                     </div>
@@ -267,7 +268,7 @@
 <footer class="bg-drk-red">
 	<div class="wrapper">
     	<div class="row">
-        	<div div class="col-1-3 left">
+        	<div class="col-1-3 left">
             	<a href="#">
                     <img src="img/logo.png" alt="Twin Finch" width="100">
                 </a>
